# thepvtlst

./: ONE_OS_PROGRESS.md  VERCEL_ENV_CHECKLIST.md
AgenticOS/: .env.example  .gitignore  LIBRARY_AND_SKILLS_100_PERCENT_PLAN.md  ONE_OS_ROADMAP.md  PROGRESS.md  README.md  SKILLS_ARCHITECTURE_RESEARCH.md  Start AgenticOS.bat  package-lock.json  package.json  railway.json  restart.ps1  turbo.json
AgenticOS/apps/agent-api/: .dockerignore  Dockerfile  pyproject.toml
AgenticOS/apps/agent-api/agenticos_agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
AgenticOS/apps/agent-api/app/: main.py
AgenticOS/apps/agent-api/app/adapters/: connector_tools.py  hermes_bridge.py  hyperframes_tools.py  skills_sync.py
AgenticOS/apps/agent-api/app/core/: connectors.py  env.py  hermes_adapter.py  hermes_profile.py  runtime.py  safety.py  schemas.py
AgenticOS/apps/agent-api/app/services/: openrouter.py  tavily.py
AgenticOS/apps/web/: middleware.ts  package.json  proxy.ts  tailwind.config.ts
AgenticOS/apps/web/app/: globals.css  layout.tsx  page.tsx
AgenticOS/apps/web/lib/: auth-mode.ts
AgenticOS/docs/: app-status-and-end-goal.md  architecture.md  clerk-cli-status.md  deployment.md  hermes-engine-map.md  security.md
AgenticOS/infra/cloudflare/: notes.md
AgenticOS/infra/dev/: dev.ps1  restart.ps1
AgenticOS/infra/supabase/: apply-migration.md
AgenticOS/infra/supabase/migrations/: 0001_core.sql  0001_core_dashboard_paste.sql  0002_clerk_ready_dev_identity.sql  0003_0004_learning_dashboard_safe.sql  0003_0004_supabase_ultra_safe.sql  (+13 more)
AgenticOS/infra/vercel/: notes.md
(+63 files in other folders)
