[project]
name = "agenticos-agent-api"
version = "0.2.0"
description = "Safe runtime manager for AgenticOS workers — Hermes-powered"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "uvicorn[standard]>=0.34.0",
  "python-dotenv>=1.2.0",
  "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@main",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

# For local development, use local vendor directory
[tool.uv.sources]
hermes-agent = { path = "../../vendor/hermes-agent" }
